[package]
name = "grace"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
openai-api-rs = "5.0.6"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
