[package]
name = "grace"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.93"
dotenv = "0.15.0"
dptree = "0.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
pretty_env_logger = "0.5.0"
redis = "0.27.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
teloxide = { version = "0.13.0", features = ["full", "webhooks"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
