[package]
name = "grace"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.93"
dotenv = "0.15.0"
dptree = "0.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
genai = "0.1.12"
log = "0.4.22"
pretty_env_logger = "0.5.0"
redis = "0.27.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "time", "chrono", "macros"], default-features = false }
teloxide = { version = "0.13.0", features = ["macros", "redis-storage", "webhooks"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
uuid = { version = "1.11.0", features = ["v7"] }
